site/web/app/themes/host/assets/css/main.css
/* ... */
.tcon-menu--xcross.tcon-transform .tcon-menu__lines::before {
  transform: rotate3d(0, 0, 1, 45deg);
}

.tcon-menu--xcross.tcon-transform .tcon-menu__lines::after {
  transform: rotate3d(0, 0, 1, -45deg);
}

.tcon-visuallyhidden {
  position: absolute;
  overflow: hidden;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  border: 0;
  clip: rect(0 0 0 0);
}

.tcon-visuallyhidden:active, .tcon-visuallyhidden:focus {
  position: static;
  overflow: visible;
  width: auto;
  height: auto;
  margin: 0;
  clip: auto;
}

.tcon-remove {
  position: relative;
  width: 25px;
  height: 25px;
  transform: scale(0.75);
}

.tcon-remove::before, .tcon-remove::after {
  position: absolute;
  top: 37%;
  left: 8%;
  display: block;
  width: 85%;
  height: 25%;
  border-radius: 2px;
  content: "";
  background: #000;
  transition: 0.3s;
}

.tcon-remove::before {
  transform: rotate(45deg);
}

.tcon-remove::after {
  transform: rotate(-45deg);
}

.tcon-remove--check.tcon-transform::before {
  top: 50%;
  width: 55%;
  transform: rotate(-135deg) translate(5%, -10%);
}

.tcon-remove--check.tcon-transform::after {
  top: 50%;
  width: 85%;
  transform: rotate(-45deg) translate(20%, 10%);
}

.checkerboard {
  background: #d50e3c;
  color: #fff;
}

.checkerboard__header {
  padding: 3.125rem 1.875rem 3.125rem;
  text-align: center;
}

.checkerboard__content {
  -ms-flex-align: stretch;
      -ms-grid-row-align: stretch;
      align-items: stretch;
}

.checkerboard__item:nth-child(3n) {
  background: #b0193b;
}

.checkerboard__item:nth-child(3n+1) {
  background: #f42352;
}

.checkerboard__item:nth-child(3n+2) {
  background: #c80b35;
}

.checkerboard__sell {
  display: -ms-flexbox;
  display: flex;
  -ms-flex-positive: 1;
      flex-grow: 1;
  width: 100%;
  transition: transform 500ms;
}

.checkerboard__sell .box {
  display: -ms-flexbox;
  display: flex;
  -ms-flex-direction: column;
      flex-direction: column;
  -ms-flex-pack: center;
      justify-content: center;
  -ms-flex-align: center;
      align-items: center;
  width: 100%;
  padding: 2.125rem;
  text-align: center;
}

.checkerboard__sell p {
  margin: 0;
}

.checkerboard__mobile {
  padding: 0rem 1.25rem 2.5rem;
}

.checkboard__mobile-selector {
  border: 2px solid #fff;
  border-radius: 0.25rem;
  padding: 10px 15px;
  background: transparent url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="56" height="28" viewBox="0 0 56 28"><path fill="%23FFF" d="M26.297 12.625l-11.594 11.578q-0.297 0.297-0.703 0.297t-0.703-0.297l-11.594-11.578q-0.297-0.297-0.297-0.711t0.297-0.711l2.594-2.578q0.297-0.297 0.703-0.297t0.703 0.297l8.297 8.297 8.297-8.297q0.297-0.297 0.703-0.297t0.703 0.297l2.594 2.578q0.297 0.297 0.297 0.711t-0.297 0.711z"/></svg>') no-repeat center right/1.75rem;
  color: #fff;
}

.checkboard__mobile-selector:focus, .checkboard__mobile-selector:hover {
  border-color: #fff;
  background-color: rgba(255, 255, 255, 0.1);
}

.checkerboard-item {
  position: relative;
  transform: translateX(0);
  transition: transform 500ms;
  perspective: 500px;
  perspective-origin: right center;
  background: inherit;
  z-index: 0;
}

.checkerboard-item__title {
  transition: box-shadow 500ms, t;
  background: #b71539 none no-repeat center center/cover;
  background-blend-mode: multiply;
  box-shadow: inset #fff 0 0 0 0;
}

.-active .checkerboard-item__title {
  box-shadow: inset #fff 0 0 0 5px;
}

.checkerboard-item__link {
  display: inline-block;
  padding: 1.875rem;
  width: 100%;
  color: #fff;
  font-size: 1.3125rem;
  text-align: center;
  vertical-align: middle;
}

.checkerboard-item__link:focus {
  outline: none;
}

.checkerboard-item__link:before {
  display: inline-block;
  width: 1px;
  padding-top: 100%;
  margin-right: -1px;
  vertical-align: middle;
  content: "";
}

.checkerboard-item__content {
  padding: 1.25rem;
  transform: rotateY(90deg);
  transform-origin: left center;
  transition: transform 500ms, opacity 0ms 500ms;
  background: #fff;
  color: #d50e3c;
  font-size: 0.9375rem;
  z-index: 2;
  opacity: 0;
}

.checkerboard-item__content .btn, .checkerboard-item__content .menu-item--banner-language-switcher select, .menu-item--banner-language-switcher .checkerboard-item__content select {
  display: block;
  margin-top: 0.625rem !important;
}

.-active .checkerboard-item__content {
  transform: rotateY(0);
  transition-delay: 0ms, 0ms;
  opacity: 1;
}

.checkerboard-item__feeling-lucky {
  color: #b455a0;
}

.split-feature__main,
.split-feature__secondary {
  display: -ms-flexbox;
  display: flex;
  -ms-flex-direction: column;
      flex-direction: column;
  -ms-flex-pack: center;
      justify-content: center;
  -ms-flex-align: center;
      align-items: center;
}

.split-feature__content {
  padding: 2.5rem 1.875rem;
}

.split-feature__content .btn, .split-feature__content .menu-item--banner-language-switcher select, .menu-item--banner-language-switcher .split-feature__content select {
  margin-top: 20px;
}

.split-feature__secondary {
  min-height: 12.5rem;
}

.split-feature__secondary .grid {
  height: 100%;
  width: 100%;
}

.split-feature__secondary .slideshow {
  display: -ms-flexbox;
  display: flex;
  -ms-flex: 1;
      flex: 1;
  width: 100%;
}

.band--inset.split-feature.-left .split-feature__content {
  margin-left: 0rem;
}

.split-feature.-twin-content .split-feature__main .split-feature__content {
  padding-bottom: 40px;
}

.split-feature.-twin-content .split-feature__secondary {
  min-height: 0;
  padding-bottom: 40px;
}

.split-feature--location-realted-building {
  width: 100%;
}

.uni-information__logo-container {
  max-width: 33.59375rem;
  margin: 0 auto;
  padding: 40px;
}

.split-feature__secondary--location-list {
  display: none;
}

.billboard {
  padding: 0 1.25rem;
}

.billboard__inner {
  padding: 3.125rem 0;
  background: transparent none no-repeat bottom right/auto 90%;
}

.billboard__main .awards {
  margin-left: -10px;
  margin-left: -10px;
}
/* ... */

